--- a/oradb-create/tasks/main.yml
+++ b/oradb-create/tasks/main.yml
@@ -6,6 +6,7 @@
     when: item.oracle_db_name is defined
     tags:
     - checkifdbexists
+    - dbcaresponsesql
     register: checkdbexist
 
 #  - debug: var=checkdbexist.stdout
@@ -13,6 +14,33 @@
 #    when: master_node
 #    tags:
 #    - checkifdbexists
+
+  - name: Create responsefile for dbca with sql scripts (1)
+    template: src=dbca-create-db.sh.{{ item.0.oracle_version_db }}.j2 dest={{ oracle_rsp_stage }}/{{ oracle_create_db_sh }}  owner={{ oracle_user }} group={{ oracle_group }} mode=700 backup=yes
+    with_together:
+       - oracle_databases
+       - checkdbexist.results
+    when: master_node and item.1.stdout != "1"
+    tags:
+    - dbcaresponsesql
+
+  - name: Create responsefile for dbca with sql scripts (2)
+    template: src=dbca-create-db.sql.{{ item.0.oracle_version_db }}.j2 dest={{ oracle_rsp_stage }}/{{ oracle_create_db_sql }}  owner={{ oracle_user }} group={{ oracle_group }} mode=600 backup=yes
+    with_together:
+       - oracle_databases
+       - checkdbexist.results
+    when: master_node and item.1.stdout != "1"
+    tags:
+    - dbcaresponsesql
+
+  - name: Create init.ora for dbca with sql scripts (2)
+    template: src=init.ora.{{ item.0.oracle_version_db }}.j2 dest={{ oracle_rsp_stage }}/{{ oracle_create_db_initora }}  owner={{ oracle_user }} group={{ oracle_group }} mode=640 backup=yes
+    with_together:
+       - oracle_databases
+       - checkdbexist.results
+    when: master_node and item.1.stdout != "1"
+    tags:
+    - dbcaresponsesql
 
   - name: Create responsefile for dbca
     template: src=dbca-create-db.rsp.{{ item.0.oracle_version_db }}.j2 dest={{ oracle_rsp_stage }}/{{ oracle_dbca_rsp }}  owner={{ oracle_user }} group={{ oracle_group }} mode=644 backup=no
